--- a/ml-client/requirements.txt
+++ b/ml-client/requirements.txt
@@ -4,5 +4,9 @@ PySoundFile==0.9.0.post1
 python-dotenv==0.21.0
 requests==2.28.1
 soundfile==0.11.0
-torch==1.13.0
 transformers==4.25.1
+attrs==22.1.0
+iniconfig==1.1.1
+packaging==22.0
+pluggy==1.0.0
+pytest==7.2.0
