--- a/ml-client/Dockerfile
+++ b/ml-client/Dockerfile
@@ -1,13 +1,8 @@
 # in Docker, it is common to base a new image on a previously-created image
-# Use an official Python runtime image as a parent image to base this image on
 FROM python:3.8-slim-buster
-# Install any needed packages specified in requirements.txt
-# in Python, a requirements.txt file is a way of indicating dependencies in a way that the package manager, pip, can understand
-COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+COPY requirements.txt .
 COPY . .
-# by default Docker containers are closed off to the external world
-# Make port 80 available to the world outside this container
-EXPOSE 80
+RUN pip3 install -r requirements.txt
 # Run app.py when the container launches
-CMD ["python", "__main__.py"]
+ENV FLASK_APP=app.py
+CMD flask run
