--- a/ml-client/Dockerfile
+++ b/ml-client/Dockerfile
@@ -3,6 +3,5 @@ FROM python:3.8-slim-buster
 COPY requirements.txt .
 COPY . .
 RUN pip3 install -r requirements.txt
-# Run app.py when the container launches
-ENV FLASK_APP=app.py
+ENV FLASK_APP app.py
 CMD flask run
