--- a/ml-client/Dockerfile
+++ b/ml-client/Dockerfile
@@ -4,4 +4,5 @@ COPY requirements.txt .
 COPY . .
 RUN pip3 install -r requirements.txt
 ENV FLASK_APP app.py
-CMD flask run
+EXPOSE 5001
+CMD ["flask","run","--host=0.0.0.0","--port=5001"]
