--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,9 +12,10 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./ml-client
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
