--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: ML Client Build and Test
 
 on:
   push:
-    branches: ["ml-client-workflow"]
+    branches: ["main"]
 
 permissions:
   contents: read
