--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -5,7 +5,7 @@ name: Web App Build and Test
 
 on:
   push:
-    branches: [ "Yvonne511-patch-1" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
