--- a/.github/workflows/ml-client.yml
+++ b/.github/workflows/ml-client.yml
@@ -6,6 +6,8 @@ name: ML Client Build and Test
 on:
   push:
     branches: ["main"]
+  pull_request: 
+    branches: [ "main" ]
 
 permissions:
   contents: read
