--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -6,6 +6,8 @@ name: Web App Build and Test
 on:
   push:
     branches: [ "main" ]
+  pull_request: 
+    branches: [ "main" ]
 
 permissions:
   contents: read
