--- a/.github/workflows/ml-client.yml
+++ b/.github/workflows/ml-client.yml
@@ -15,6 +15,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./web-client
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
