--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build: ./web-client
     working_dir: "/app"
     ports:
-      - "5000:5000"
+      - "${WEB_CLIENT_LOCAL_PORT}:5000"
     links:
       - ml-client
     depends_on:
