--- a/.github/workflows/web-app-client.yml
+++ b/.github/workflows/web-app-client.yml
@@ -19,7 +19,7 @@ jobs:
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker Image
       run: |
-        cd ml-client
+        cd web-client
         docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/final-project-team-7-web-app-client:latest
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USER}}/final-project-team-7-web-app-client
